<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context="com.ibm.watson.developer_cloud.android.myapplication.MainActivity">


    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="500dp"
        android:layout_height="55dp"
        android:layout_marginTop="0dp"
        android:background="#2DCCD2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/titleapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"

            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="19dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:src="@drawable/settings" />

    </RelativeLayout>

    <ListView
        android:id="@+id/chatlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topbar"
        android:divider="@null"
        android:paddingBottom="58dip"></ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_language"
        android:textStyle="bold"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/target_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/spanish" />

        <RadioButton
            android:id="@+id/french"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french" />

        <RadioButton
            android:id="@+id/italian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-28dp">

        <EditText
            android:id="@+id/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:hint="@string/input_hint" />

        <ImageButton
            android:id="@+id/mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#2DCCD2"
            android:contentDescription="@string/microphone"
            android:src="@drawable/button" />

    </LinearLayout>

    <Button
        android:id="@+id/translate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/translate"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/translation_label"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/translated_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/gallery_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gallery" />

        <Button
            android:id="@+id/camera_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Camera" />


    </LinearLayout>

    <ImageView
        android:id="@+id/loaded_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:visibility="gone" />

</RelativeLayout>
