<?xml version="1.0" encoding="utf-8"?><!--
/*******************************************************************************
* Copyright (c) 2014-2015 IBM Corp.
*
* All rights reserved. This program and the accompanying materials
* are made available under the terms of the Eclipse Public License v1.0
* and Eclipse Distribution License v1.0 which accompany this distribution.
*
* The Eclipse Public License is available at
*   http://www.eclipse.org/legal/epl-v10.html
* and the Eclipse Distribution License is available at
*   http://www.eclipse.org/org/documents/edl-v10.php.
*
* Contributors:
*    Mike Robertson - initial contribution
*******************************************************************************/
-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.ibm.iot.android.iotstarter.fragments.LoginPagerFragment">
    <!--  <TextView
              style="@style/MyActionBarTitleText"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:paddingTop="@dimen/activity_setting_margin"
              android:paddingBottom="@dimen/activity_setting_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:text="@string/organization_setting"
              android:id="@+id/organizationSetting"
              />-->
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="500dp"
        android:layout_height="55dp"
        android:layout_marginTop="0dp"
        android:background="#2DCCD2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:text="Please enter IoTP, STT and TTS credentials"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context="com.ibm.iot.android.iotstarter.fragments.LoginPagerFragment">

    <TextView
        android:text="WATSON IOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    <TextView
        android:text="ORG ID"
        android:layout_width="90dp"
        android:layout_marginLeft="15dp"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/organizationValue"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/organization_value"
        android:inputType="textNoSuggestions"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Device ID"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/deviceIDValue"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/device_id_value"
        android:inputType="textNoSuggestions"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Auth Token"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/authTokenValue"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/auth_token_value"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <Button
        android:id="@+id/showTokenButton"
        style="@style/SmallButton"
        android:layout_gravity="center|bottom"
        android:text="@string/showToken_button" />

    <CheckBox
        android:id="@+id/checkbox_ssl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:text="@string/useSSL_button"
        android:visibility="gone" />
    <!--android:onClick="onCheckboxClicked"/-->


    <TextView
        android:text="WATSON STT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Username"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/sttusername"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="STT USERNAME"
        android:inputType="text"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Password"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/sttpassword"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="STT PASSWORD"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>

    <Button
        android:id="@+id/showSTTpsd"
        style="@style/SmallButton"
        android:layout_gravity="center|bottom"
        android:text="@string/showSTTpsw_button" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Custom Stt"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />

        <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="Custom Stt Credentials"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
            android:layout_marginRight="10dp"
        android:id="@+id/customstt"
        />
    </LinearLayout>

    <TextView
        android:text="WATSON TTS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Username"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ttsusername"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="TTS USERNAME"
        android:inputType="text"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Password"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ttspassword"
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="TTS PASSWORD"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:layout_marginRight="10dp"
        android:textColor="@color/black" />
    </LinearLayout>
    <Button
        android:id="@+id/showTTSpsd"
        style="@style/SmallButton"
        android:layout_gravity="center|bottom"
        android:text="@string/showTTSpsw_button" />

    <TextView
        android:text="THEME"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center_vertical"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Hex Color"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="Hex Color"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
        android:layout_marginRight="10dp"
        android:id="@+id/hexcolor"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Title"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="Title"
        android:textColor="@color/black"
        android:inputType="textNoSuggestions"
        android:id="@+id/title_app"
        android:layout_marginRight="10dp"
        />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:text="Logo"
            android:layout_width="90dp"
            android:layout_marginLeft="15dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content" />
    <ImageButton
        style="@style/MyActionBarTitleText"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"

        android:id="@+id/logobutton"
        android:src="@drawable/logo"
        />
        </LinearLayout>
    <TextView
        android:id="@+id/isConnected"
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_setting_margin"
        android:text="@string/is_connected"
        android:textAlignment="center"
        android:visibility="gone" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/activateButton"
        style="@style/BottomButton"
        android:layout_gravity="center|bottom"
        android:text="@string/activate_button"
        android:textColor="@color/white" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>

